--- a/sites/all/themes/ukabbalah/sass/style.scss
+++ b/sites/all/themes/ukabbalah/sass/style.scss
@@ -5383,6 +5383,7 @@ body.page-node-6419{
         font-size: 16px;
         font-weight: 700;
         letter-spacing: 1px;
+        margin-left: 76px;
         padding: 15px 50px;
         text-align: center;
         text-transform: capitalize;
@@ -5399,7 +5400,6 @@ body.page-node-6419{
         width: 260px;
     }
     .form-item label{
-        width: 180px;
         color: #433a3a;
         display: inline-block;
         font-size: 18px;
