--- a/sites/all/themes/ukabbalah/css/landing_page.css
+++ b/sites/all/themes/ukabbalah/css/landing_page.css
@@ -35,7 +35,7 @@
     margin-top: 20px;
 }
 #loginRightRail{
-	margin-bottom: 60px;
+	margin-bottom: 30px;
 }
 .KarenImg {
     float: left;
@@ -60,8 +60,9 @@
     margin-right: 15px;
 }
 #registerHereWrapper {
+    float: left;
     margin-bottom: 60px;
-    margin-top: 40px;
+    margin-top: 20px;
 }
 .highlightText::first-letter {
     font-size: 63px;
@@ -77,4 +78,7 @@
     border-bottom: 1px solid #b3acd6;
     margin-bottom: 50px;
     padding-bottom: 25px;
+}
+#connectKaren {
+    margin-bottom: 20px;
 }
