--- a/sites/all/themes/ukabbalah/sass/style.scss
+++ b/sites/all/themes/ukabbalah/sass/style.scss
@@ -129,26 +129,20 @@ transition: all 3s ease-in-out;
     width: 33.33%;
 }
 .smallScreenHeader #searchWrapper{
-    width: 25%;
+    width: 30%;
 }
-@media (min-width: 981px) {
-    .smallScreenHeader #loginWrapper{
-      width: 36.33%;
-    }
-}
-
 #loginWrapper{
     float: right;
     height: 60px;
-    width: 31.33%;
+    width: 33.33%;
 }
 .smallScreenHeader #logoWrapper{
     background: url(../images/kc_logo_grey_no_type.svg) no-repeat scroll 24px 15px;
     width: 36.33%;
 }
-// .smallScreenHeader #loginWrapper{
-//     background: orange none repeat scroll 0 0;
-// }
+.smallScreenHeader #loginWrapper{
+    /*background: orange none repeat scroll 0 0;*/
+}
 #logoWrapper > a {
     border-right: 1px solid #7f7979;
     display: inline-block;
@@ -246,12 +240,12 @@ a.plusIcone {
     margin-left: 14px;
     margin-right: 8px;
 }
-// #userInfoWrapperResponsive,
-// .smallScreenHeader #userInfoWrapper > span{
-//     display: none;
-// }
+#userInfoWrapperResponsive,
+.smallScreenHeader #userInfoWrapper > span{
+    display: none;
+}
 .smallScreenHeader #userInfoWrapperResponsive{
-    // display: block;
+    display: block;
     float: right;
 }
 #userInfoWrapperResponsive ul {
@@ -696,28 +690,7 @@ ul.sidr-class-menu li.sidr-class-expanded > a:before{
 #frontLeft{
   z-index: 1!important;
 }
-@media (min-width: 480px) {
-    .smallScreenHeader #userInfoWrapper > span {
-        display: inline-block;
-    }
-    #userInfoWrapperResponsive{
-        display: none;
-    }
-}
-@media (min-width: 480px) and (max-width: 1660px){
-    #loginWrapper {
-        width: 82%;
-    }
-}
-@media (max-width: 479px) {
-    .smallScreenHeader #userInfoWrapper > span {
-        display: none;
-    }
-    #userInfoWrapperResponsive{
-        display: block;
-    }
 
-}
 /*===========================end new menu===============================*/
 /*================== END LOCAL MENU ============================= */
 
