--- a/sites/all/themes/ukabbalah/sass/style.scss
+++ b/sites/all/themes/ukabbalah/sass/style.scss
@@ -5444,3 +5444,12 @@ body.page-node-6419{
         text-transform: capitalize;
     }
 }
+.buttonMemberDesc.upgradeLesson {
+    margin-left: -50px;
+    text-align: center;
+    width: 252px;
+}
+.buttonMember.upgradeLesson {
+    margin-left: -50px;
+    width: 200px;
+}
