--- a/sites/all/themes/ukabbalah/sass/style.scss
+++ b/sites/all/themes/ukabbalah/sass/style.scss
@@ -5453,3 +5453,10 @@ body.page-node-6419{
     margin-left: -50px;
     width: 200px;
 }
+.wrapperLoginBloc.upgradeLessonBottom {
+    display: block !important;
+    height: 80px;
+}
+.wrapperLoginBloc.upgradeLessonBottom .buttonMemberDesc {
+    color: #433a3a;
+}
