--- a/sites/all/themes/ukabbalah/sass/style.scss
+++ b/sites/all/themes/ukabbalah/sass/style.scss
@@ -734,6 +734,9 @@ ul.sidr-class-menu li.sidr-class-expanded > a:before{
     .smallScreenHeader .searchWrapper {
         width: 140px;
     }
+    .smallScreenHeader #loginWrapper{
+        width: 45.33%;
+    }
 
 }
 /*===========================end new menu===============================*/
