--- a/sites/all/themes/ukabbalah/sass/style.scss
+++ b/sites/all/themes/ukabbalah/sass/style.scss
@@ -3485,6 +3485,9 @@ ul.quicktabs-tabs.quicktabs-style-zen {
 .page-node-5831 #page-title {
     text-align: center;
 }
+p.rtecenter > img {
+    float: none;
+}
 /********added style for the support tap*************/
 .ZenboxTabRight{
     bottom: 10%;
