--- a/sites/all/modules/nice_menus/css/nice_menus.css
+++ b/sites/all/modules/nice_menus/css/nice_menus.css
@@ -1,4 +1,3 @@
-/* $Id: nice_menus.css,v 1.28 2008/07/11 16:04:44 add1sun Exp $ */
 /*
   This file contains the basic logic for nice menus, and should not be
   edited.  To customize the menus, it's recommended to create a custom CSS
@@ -8,24 +7,26 @@
 */
 
 /* Below should fix menu being a few pixels away in some themes, and menus disappearing behind other stuff. */
-.block-nice_menus {
+.block-nice-menus {
   line-height: normal;
   z-index: 10;
 }
 
 ul.nice-menu,
 ul.nice-menu ul {
-/*  z-index: 10000;*/
+  z-index: 5;
   position: relative;
 }
 
 ul.nice-menu li {
-  /*position: relative;*/
+  position: relative;
 }
 
-/*ul.nice-menu a {
+ul.nice-menu a {
   display: block;
-}*/
+  /*Default to Blue, but override as necessary*/
+  color: #027ac6;
+}
 
 ul.nice-menu ul,
 /* For Garland header. */
@@ -103,16 +104,10 @@ ul.nice-menu li.over li.over li.over ul ul ul,
 ***************/
 
 /* Iframe to fix z-index bug when menu hovers over <select> fields. */
-ul.nice-menu li.menuparent ul
+ul.nice-menu li.menuparent ul,
 /* For Garland header. */
-{
+#header-region ul.nice-menu li.menuparent ul {
   overflow: visible !important;
-   
-z-index: -1;
-  /* overflow: hidden; */
-}
-ul.nice-menu li.menu-272 ul .menu-278 {
-  /*padding-right: 33px!important; padding-right: 33px!important; for chrom*/
 }
 
 ul.nice-menu li.menuparent ul iframe,
