--- a/sites/all/themes/ukabbalah/sass/style.scss
+++ b/sites/all/themes/ukabbalah/sass/style.scss
@@ -749,7 +749,7 @@ ul.sidr-class-menu li.sidr-class-expanded > a:before{
     }
 }
 
-@media (max-width: 1500px){
+@media (min-width: 1000px) and (max-width: 1500px){
     .smallScreenHeader .newHeaderWrapperLocalMenuLogo {
         display: block;
     }
