--- a/sites/all/themes/ukabbalah/sass/style.scss
+++ b/sites/all/themes/ukabbalah/sass/style.scss
@@ -323,7 +323,7 @@ a.userActiveResponsive{
         max-width: 739px;
         min-width: 680px;
         width: auto!important;
-        float: left; 
+        // float: left; 
     }
 
 #newHeaderWrapperLanguage{
