--- a/sites/all/themes/ukabbalah/sass/style.scss
+++ b/sites/all/themes/ukabbalah/sass/style.scss
@@ -285,7 +285,7 @@ a.plusIcone {
     display:block
 }
 a.userActiveResponsive{
-    background: url("../images/white_arrow.svg") no-repeat scroll right top 6px;
+    // background: url("../images/white_arrow.svg") no-repeat scroll right top 6px;
 }
 #userInfoWrapperResponsive{
     padding: 0 5px 5px 20px;
@@ -295,8 +295,7 @@ a.userActiveResponsive{
 }
 /*// #userInfoWrapperResponsive:hover {
 //     border: 1px solid #746d6d;
-//     background: #433A3A;
-    
+//     background: #433A3A;   
 // }*/
 #userInfoWrapperResponsive ul ul {
     background: #433a3a none repeat scroll 0 0;
