--- a/sites/all/themes/ukabbalah/sass/style.scss
+++ b/sites/all/themes/ukabbalah/sass/style.scss
@@ -284,15 +284,18 @@ a.plusIcone {
 #userInfoWrapperResponsive ul li:hover > ul {
     display:block
 }
-a.userActiveResponsive{
-    // background: url("../images/white_arrow.svg") no-repeat scroll right top 6px;
-}
+// a.userActiveResponsive{
+//     // background: url("../images/white_arrow.svg") no-repeat scroll right top 6px;
+// }
 #userInfoWrapperResponsive{
     padding: 0 5px 5px 20px;
     /*// border: 1px solid #433a3a;*/
     position: relative;
     z-index: 9;
 }
+
+
+
 /*// #userInfoWrapperResponsive:hover {
 //     border: 1px solid #746d6d;
 //     background: #433A3A;   
