--- a/sites/all/themes/ukabbalah/sass/style.scss
+++ b/sites/all/themes/ukabbalah/sass/style.scss
@@ -284,9 +284,9 @@ a.plusIcone {
 #userInfoWrapperResponsive ul li:hover > ul {
     display:block
 }
-// a.userActiveResponsive{
-//     // background: url("../images/white_arrow.svg") no-repeat scroll right top 6px;
-// }
+a.userActiveResponsive{
+    background: url("../images/white_arrow.svg") no-repeat scroll right top 6px;
+}
 #userInfoWrapperResponsive{
     padding: 0 5px 5px 20px;
     /*// border: 1px solid #433a3a;*/
